# sql

./: pyproject.toml
lessons/: 0-create-db.ipynb  1-selects.ipynb  2-filters.ipynb  3-orderby.ipynb  4-aggregations.ipynb  5-joins.ipynb  6-subqueries.ipynb  7-CTEs.ipynb  8-window-functions.ipynb  practice.db
