[tool.poetry]
name = "learn-sql"
version = "0.1.0"
description = "SQL Practice repo"
authors = ["Charles Clark <charles.clark@theaa.com>"]
readme = "README.md"
packages = [{include = "learn_sql"}]

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.30.1"
ipython-sql = "^0.5.0"
sqlalchemy = "^2.0.43"
jupyterlab = "^4.4.7"
pandas = "^2.3.2"
sqlite-utils = "^3.38"
sql = "^2022.4.0"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
